<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.altaf.rairiwala.AccountManagment.UserLogin"
    android:background="@color/blue">
    <ImageView
        android:id="@+id/userprofile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/user" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userprofile"
        android:layout_margin="20dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/phone"
                android:ems="10"
                android:hint="@string/enter_phone_number"
                android:inputType="number"
                android:textColorHint="@color/red" />

            <EditText
                android:id="@+id/login_up_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/password"
                android:ems="10"
                android:hint="@string/enterpin"
                android:inputType="numberPassword"
                android:textColorHint="@color/red" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_widgets"
                android:fontFamily="sans-serif"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/donot_have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Do not have account?"
                android:layout_margin="7dp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_margin="7dp"
                android:layout_marginTop="7dp"
                android:textColor="@color/red"
                android:textAlignment="center"
                android:textSize="15dp"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
